--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>评论区</title>
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, PingFang SC, Microsoft YaHei, sans-serif; margin: 16px; }
-    .bar { display: flex; gap: 8px; align-items: center; margin-bottom: 12px; }
-    .bar button { padding: 6px 10px; border: 1px solid #ccc; background: #f7f7f7; cursor: pointer; border-radius: 6px; }
-    .bar .label { color: #666; font-size: 12px; }
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, PingFang SC, Microsoft YaHei, sans-serif;
+      margin: 16px;
+    }
+    .bar {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+      margin-bottom: 12px;
+    }
+    .bar button {
+      padding: 6px 10px;
+      border: 1px solid #ccc;
+      background: #f7f7f7;
+      cursor: pointer;
+      border-radius: 6px;
+    }
+    .bar .label {
+      color: #666;
+      font-size: 12px;
+    }
   </style>
 </head>
 <body>
@@ -27,26 +44,34 @@
     document.addEventListener('DOMContentLoaded', function () {
       const ENV_ID = 'https://twikoo-kx501.netlify.app/.netlify/functions/twikoo';
 
+      // 从 URL 参数获取主题
       function getThemeFromQuery() {
         const u = new URL(location.href);
         const t = (u.searchParams.get('theme') || '').toLowerCase();
         return (t === 'dark' || t === 'light') ? t : null;
       }
 
+      // 从本地存储获取主题
       function getThemeFromStorage() {
         const t = localStorage.getItem('twikoo_theme');
         return (t === 'dark' || t === 'light') ? t : null;
       }
 
+      // 应用主题
       function applyTheme(theme) {
         console.log('切换主题为:', theme);
         localStorage.setItem('twikoo_theme', theme);
-        const el = document.getElementById('tcomment');
+
+        // 确保容器存在
+        let el = document.getElementById('tcomment');
         if (!el) {
-          console.error('找不到 #tcomment 元素');
-          return;
+          el = document.createElement('div');
+          el.id = 'tcomment';
+          document.body.appendChild(el);
+        } else {
+          el.innerHTML = '';
         }
-        el.innerHTML = ''; // 清空旧评论区
+
         twikoo.init({
           envId: ENV_ID,
           el: '#tcomment',
@@ -62,7 +87,7 @@
       document.getElementById('btnLight').addEventListener('click', () => applyTheme('light'));
       document.getElementById('btnDark').addEventListener('click', () => applyTheme('dark'));
 
-      // 监听父页面 postMessage
+      // 监听父页面 postMessage（预留自动切换）
       window.addEventListener('message', (e) => {
         const data = e.data || {};
         if (data.type === 'theme') {
