--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 <body>
   <div id="tcomment"></div>
 
-  <!-- Twikoo -->
   <script src="https://cdn.jsdelivr.net/npm/twikoo@1.6.44/dist/twikoo.min.js"></script>
   <script>
     twikoo.init({
-      envId: 'https://twikoo-kx501.netlify.app/.netlify/functions/twikoo', // 你的 Netlify API 地址
-      el: '#tcomment',
-      theme: 'light' // 固定浅色，可改为 'dark'
-    });
+      envId: 'https://twikoo-kx501.netlify.app/.netlify/functions/twikoo',
+      el: '#tcomment'
+    })
   </script>
 </body>
 </html>
