--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="color-scheme" content="light dark">
   <style>
-    @media (prefers-color-scheme: dark) {
-      body {
-        background-color: #1e1e1e;
-        color: #ddd;
-      }
+    body {
+      margin: 0;
+      padding: 12px;
+      box-sizing: border-box;
+    }
+
+    #tcomment {
+      padding: 12px;
+      background-color: transparent;
     }
   </style>
   <title>评论区</title>
